Aumento del interlineado (#60)

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -52,6 +52,7 @@
 \renewcommand{\Re}[0]{\mathrm{Re}\ }
 \renewcommand{\Im}[0]{\mathrm{Im}\ }
 \renewcommand{\H}[0]{\mathbb{H}}
+\renewcommand{\baselinestretch}{1.2}
 
 %MORE PACKAGES HERE
 \newcommand{\R}[0]{\mathbb{R}}
