Mejorada definición de autosimilaridad (#69)

--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -25,10 +25,10 @@ Una figura o subconjunto $A$ de $\R^n$ es \textbf{autosimilar} si está compuest
 $$
 A = \bigcup_{i=1}^n f_i\circ h_i(A),
 $$
-donde cada $h_i, i=1,\dots,n$ es una homotecia de razón menor que 1 y $f_i, i=1,\dots,n$ es un movimiento rígido. 
+donde cada $h_i, i=1,\dots,n$, es una homotecia de razón menor que 1 y $f_i, i=1,\dots,n$, es un movimiento rígido. 
 \end{definicion}
 
-En futuras ocasiones se utilizarán indistintamente los términos de <<reducción por un factor de escala>> e <<imagen vía una homotecia>>, evidenciando el movimiento rígido y queriendo en ambos casos referirnos a este concepto.
+En futuras ocasiones se utilizarán indistintamente los términos de <<reducción por un factor de escala>> e <<imagen vía una homotecia>>, eludiendo mencionar el movimiento rígido por simplicidad expositiva, si bien entendemos implícitamente que hay siempre uno asociado a la homotecia.
 
 Para afianzar y formalizar conceptos y con el objetivo de introducir una definición de la dimensión, estudiaremos algunos ejemplos clásicos de objetos fractales.
 
