Ahora sí, corregido Cantor (#60)

--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -74,7 +74,7 @@ Observemos ahora que en la primera iteración eliminamos $1$ intervalo de longit
 \end{equation*}
 donde hemos usado que la suma de una serie geométrica de razón $|q|<1$ es $$\sum_{n=0}^\infty q^n = \frac{1}{1-q}.$$
 
-Esto nos lleva a concluir que la longitud eliminada es igual a la longitud original, es decir, la longitud de $\mathbf C$ es nula y aún así tenemos puntos, por ejemplo los extremos de los intervalos que se van generando. Es decir, los puntos de $\mathbf{C}$ no están agrupados, sino que forman una especie de \textit{polvareda}.
+Esto nos lleva a concluir, teniendo en cuenta que para los subconjuntos de $\R$ considerados su longitud no es más que su medida usual de Lebesgue, que la longitud eliminada es igual a la longitud original, es decir, la longitud de $\mathbf C$ es nula y aún así tenemos infinitos puntos, por ejemplo los extremos de los intervalos que se van generando. Es decir, los puntos de $\mathbf{C}$ no están agrupados, sino que forman una especie de \textit{polvareda}.
 
 \subsection{El triángulo de Sierpinski}
 \label{subsection:triangulo-Sierpinski} 
