Añadido comentario sobre Alexandrof-Hausdorff

--- a/memoria/tex/bibliography.tex
+++ b/memoria/tex/bibliography.tex
@@ -1,6 +1,10 @@
 \begin{thebibliography}{99}
     
 \bibitem{rubiano} Rubiano, G. (2020). \textit{Iteración y fractales (con mathematica ®)}. Universidad Nacional de Colombia.
+\bibitem{Dreher} F. Dreher; T. Samuel. (2014). Continuous Images of Cantor’s Ternary Set. \textit{The American Mathematical Monthly}, 121(7), 640–643. \url{https://doi.org/10.4169/amer.math.monthly.121.07.640}.
+
+\bibitem{Benyamini} Benyamini, Y. (1998). Applications of the Universal Surjectivity of the Cantor Set. \textit{American Mathematical Monthly}, 105, 832-839. \url{https://arxiv.org/pdf/1303.3810.pdf}.
+
 \bibitem{alma991013963162704990} Edgar, G.A. (2008). \textit{Measure, Topology, and Fractal Geometry} (2nd ed. 2008.). Springer New York. \url{https://doi.org/10.1007/978-0-387-74749-1}
 \bibitem{alma991007242979704990} Mandelbrot, B. (1983). \textit{The Fractal geometry of nature}. Freeman.
 \bibitem{alma991007022459704990} Falconer, K. (1990). \textit{Fractal geometry: mathematical foundations and applications}. John Wiley.
