--- a/memoria/tex/capitulos/capitulo-1.tex
+++ b/memoria/tex/capitulos/capitulo-1.tex
@@ -76,6 +76,8 @@ donde hemos usado que la suma de una serie geométrica de razón $|q|<1$ es $$\s
 
 Esto nos lleva a concluir, teniendo en cuenta que para los subconjuntos de $\R$ considerados su longitud no es más que su medida usual de Lebesgue, que la longitud eliminada es igual a la longitud original, es decir, la longitud de $\mathbf C$ es nula y aún así tenemos infinitos puntos, por ejemplo los extremos de los intervalos que se van generando. Es decir, los puntos de $\mathbf{C}$ no están agrupados, sino que forman una especie de \textit{polvareda}.
 
+Mencionamos finalmente que el conjunto de Cantor posee importantes propiedades desde un punto de vista topológico, como por ejemplo el conocido teorema de Alexandrof-Hausdorff, que establece que cualquier espacio topológico compacto es imagen continua de $\mathbb C$. Puede encontrarse una prueba de este resultado en \cite{Dreher}. Este resultado tiene además algunas aplicaciones en otros campos de las matemáticas, por ejemplo en curvas y en conjuntos convexos. Si se desea profundizar en estas aplicaciones recomendamos consultar \cite{Benyamini}.
+
 \subsection{El triángulo de Sierpinski}
 \label{subsection:triangulo-Sierpinski} 
 
